--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -25,7 +25,7 @@
   <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0-*" />
   <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0-*" />
   <PackageReference Include="System.Net.Http.Json" Version="9.0.0-*" />
-  
+
   <!--Verträgt sich nicht mit aktiviertem Multi-Threading in BW :-(-->
   <!--<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0-*" />-->
 
@@ -36,6 +36,9 @@
   <PackageReference Include="Blazored.Toast" Version="4.*" />
   <PackageReference Include="Blazored.FluentValidation" Version="2.2.0" />
   <PackageReference Include="Radzen.Blazor" Version="5.1.10" />
+
+  <!--Fix Pakethölle-->
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-*" />
  </ItemGroup>
 
  <ItemGroup>
