--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -4,7 +4,7 @@
 
  <!--Runtime-->
  <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
+  <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
  </PropertyGroup>
 
  <PropertyGroup>
