--- a/src/MiracleList_MAUI/MiracleList_MAUI.csproj
+++ b/src/MiracleList_MAUI/MiracleList_MAUI.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
+		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
-		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
+		<!-- <TargetFrameworks>$(TargetFrameworks);net9.0-tizen</TargetFrameworks> -->
 
 		<!-- Note for MacCatalyst:
 		The default runtime is maccatalyst-x64, except in Release config, in which case the default is maccatalyst-x64;maccatalyst-arm64.
@@ -31,13 +31,13 @@
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
-		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
-		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
-	<Version>7.12.4.0</Version><AssemblyVersion>7.12.4.0</AssemblyVersion><FileVersion>7.12.4.0</FileVersion><InformationalVersion>7.12.4.0-05/17/2023 08:09:20</InformationalVersion></PropertyGroup>
+	</PropertyGroup>
 
 	<!--ML: Projektreferenzen-->
 	<ItemGroup>
@@ -48,12 +48,12 @@
 
 	<!--ML: Zusätzliche NuGet-Pakete -->
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Maui" Version="7.0.0" />
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.JSON" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.*" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.1" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.*" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.JSON" Version="9.0.*" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.*" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.*" />
 		<PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.3" />
 		<PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
 	</ItemGroup>
@@ -82,7 +82,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <COMReference Include="Microsoft.Office.Interop.Word">
+	  <COMReference Include="Microsoft.Office.Interop.Word" Condition="'$(TargetFramework)' == 'net9.0-windows10.0.19041.0'">
 	    <WrapperTool>tlbimp</WrapperTool>
 	    <VersionMinor>7</VersionMinor>
 	    <VersionMajor>8</VersionMajor>
@@ -141,7 +141,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
