--- a/src/MiracleList_BD/MiracleList_BD.csproj
+++ b/src/MiracleList_BD/MiracleList_BD.csproj
@@ -46,8 +46,9 @@
  <!--Nuget-Pakete-->
  <ItemGroup>
   <!--Standardreferenzen für BD-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.*" />
+  <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
  </ItemGroup>
 
  <!--COM-Referenzen für Word-Interop-->
