--- a/src/MiracleList_BM/MiracleList_BM.csproj
+++ b/src/MiracleList_BM/MiracleList_BM.csproj
@@ -104,7 +104,7 @@
  <ItemGroup>
   <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
   <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.*" />
  </ItemGroup>
  
  <!--COM-Referenz für Word-Dokumentengenerierung - geht nur auf Windows!!!-->
