--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -19,17 +19,17 @@
  <!--NuGet-->
  <ItemGroup>
 
-  <PackageReference Include="Microsoft.AspNetCore.Components" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.*" />
   <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
-  <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.*" />
   <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.6.2">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
-  <PackageReference Include="System.DirectoryServices" Version="9.0.0-*" />
+  <PackageReference Include="System.DirectoryServices" Version="9.0.*" />
   <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
  </ItemGroup>
 
