--- a/Test/BlazorTests/BlazorTests.csproj
+++ b/Test/BlazorTests/BlazorTests.csproj
@@ -12,8 +12,9 @@
   <PackageReference Include="Blazored.LocalStorage" Version="4.*" />
   <PackageReference Include="bunit" Version="1.*" />
   <PackageReference Include="JustMock" Version="2024.3.805.336" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.*" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+  <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   <PackageReference Include="xunit" Version="2.*" />
   <PackageReference Include="xunit.runner.visualstudio" Version="2.*">
    <PrivateAssets>all</PrivateAssets>
