Mehr Felixbilität in Configuration Mailserver

--- a/src/MiracleList_Backend/appsettings.json
+++ b/src/MiracleList_Backend/appsettings.json
@@ -20,7 +20,9 @@
  "EMail": {
   "SMTPServer": "IhrServer.com",
   "SMTPSender": "IhrName@IhreDomain.de",
-  "SMTPPassword": "geheim"
+  "SMTPUser": "IhrName@IhreDomain.de",
+  "SMTPPassword": "geheim",
+  "SMTPSecure": "true"
  }
 
 }
