--- a/src/MiracleList_Backend/appsettings.Development.json
+++ b/src/MiracleList_Backend/appsettings.Development.json
@@ -18,7 +18,9 @@
  "EMail": {
   "SMTPServer": "IhrServer.com",
   "SMTPSender": "IhrName@IhreDomain.de",
-  "SMTPPassword": "geheim"
+  "SMTPUser": "IhrName@IhreDomain.de",
+  "SMTPPassword": "geheim",
+  "SMTPSecure": "true"
  }
 
 }
