CC und BBC beim Mailversand

--- a/src/MiracleList_Backend/appsettings.json
+++ b/src/MiracleList_Backend/appsettings.json
@@ -20,6 +20,8 @@
  "EMail": {
   "SMTPServer": "IhrServer.com",
   "SMTPSender": "IhrName@IhreDomain.de",
+  "SMTPCC": "",
+  "SMTPBCC": "",
   "SMTPUser": "IhrName@IhreDomain.de",
   "SMTPPassword": "geheim",
   "SMTPSecure": "true"
