--- a/src/MiracleList_Backend/appsettings.Development.json
+++ b/src/MiracleList_Backend/appsettings.Development.json
@@ -18,6 +18,8 @@
  "EMail": {
   "SMTPServer": "IhrServer.com",
   "SMTPSender": "IhrName@IhreDomain.de",
+  "SMTPCC": "",
+  "SMTPBCC": "",
   "SMTPUser": "IhrName@IhreDomain.de",
   "SMTPPassword": "geheim",
   "SMTPSecure": "true"
