Fix: Projektdatei Format JSON

--- a/src/EFCTools/EFCTools.csproj
+++ b/src/EFCTools/EFCTools.csproj
@@ -4,24 +4,23 @@
 
  <PropertyGroup>
   <OutputType>Exe</OutputType>
+  <UserSecretsId>d55ee155-d9fb-45e8-ba22-1d187e149ed6</UserSecretsId>
  </PropertyGroup>
 
  <ItemGroup>
   <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.3.10.8" />
-  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0-*">
+  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="9.0.*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.*">
    <PrivateAssets>all</PrivateAssets>
    <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
   </PackageReference>
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0-*" />
-<<<<<<< HEAD
+  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.*" />
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
-=======
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.18.1" />
->>>>>>> 474ddbb4cb08e6358db2faf29ba69844b023f335
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+
  </ItemGroup>
 
  <ItemGroup>
