--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -10,7 +10,7 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.18.1" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
   <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.*" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.*" />
