--- a/src/MiracleList_BM/MiracleList_BM.csproj
+++ b/src/MiracleList_BM/MiracleList_BM.csproj
@@ -102,8 +102,8 @@
 
  <!--Neue NuGet-Pakete für MAUI, die seit .NET 8.0 explicit sein müssen-->
  <ItemGroup>
-  <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+  <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.*" />
   <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.*" />
  </ItemGroup>
  
