--- a/src/MiracleList_BU/MiracleList_BU.csproj
+++ b/src/MiracleList_BU/MiracleList_BU.csproj
@@ -16,6 +16,9 @@
  <ItemGroup>
    <_WebToolingArtifacts Remove="Properties\PublishProfiles\MiracleList-BU - Azure-Deployment.pubxml" />
  </ItemGroup>
+ <ItemGroup>
+   <Compile Include="..\MiracleList_BS\Authentication\MLAuthSchemeHandler.cs" Link="Authentication\MLAuthSchemeHandler.cs" />
+ </ItemGroup>
 
  <!--Projekte und NuGet-Pakete-->
  <ItemGroup>
@@ -23,6 +26,7 @@
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.*" />
  </ItemGroup>
  <ItemGroup>
+   <Folder Include="Authentication\" />
    <Folder Include="wwwroot\" />
  </ItemGroup>
 
