--- a/Test/UnitTests/UnitTests.csproj
+++ b/Test/UnitTests/UnitTests.csproj
@@ -47,10 +47,10 @@
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
   <PackageReference Include="NHibernateProfiler.Appender" Version="6.0.*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
-  <PackageReference Include="xunit.runner.visualstudio" Version="2.*">
+  <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
    <PrivateAssets>all</PrivateAssets>
    <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
   </PackageReference>
