--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -14,11 +14,11 @@
  </ItemGroup>
  
  <ItemGroup>
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
   <PackageReference Include="xunit" Version="2.*" />
   <PackageReference Include="DeepEqual" Version="5.*" />
   <PackageReference Include="Xunit.SkippableFact" Version="1.*" />
-  <PackageReference Include="xunit.runner.visualstudio" Version="2.*">
+  <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
    <PrivateAssets>all</PrivateAssets>
   </PackageReference>
