--- a/src/EFCTools/EFCTools.csproj
+++ b/src/EFCTools/EFCTools.csproj
@@ -8,7 +8,7 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.3.*" />
+  <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.4.193.9" />
   <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="9.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.*">
