--- a/Test/SeleniumTests/SeleniumTests.csproj
+++ b/Test/SeleniumTests/SeleniumTests.csproj
@@ -31,9 +31,9 @@
   <PackageReference Include="MSTest.TestFramework" Version="3.*" />
   <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.27.*" />
   <PackageReference Include="Selenium.Microsoft.Webdriver2" Version="2.0.*" />
-  <PackageReference Include="Selenium.Support" Version="4.28.0" />
+  <PackageReference Include="Selenium.Support" Version="4.*" />
   <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="133.0.6943.9800" />
-  <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  <PackageReference Include="System.Data.SqlClient" Version="4.*" />
  </ItemGroup>
 
  <ItemGroup>
