--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -31,9 +31,9 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.*" />
   <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.*" />
-  <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
-  <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
-  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.103.7.1" />
+  <PackageReference Include="System.Data.SqlClient" Version="4.*" />
+  <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.*" />
+  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.*" />
  </ItemGroup>
 
  <ItemGroup>
