--- a/src/DA/DA.csproj
+++ b/src/DA/DA.csproj
@@ -67,7 +67,7 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.*" />
-  <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.4.193.9" />
+  <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.*" />
   <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
  </ItemGroup>
