--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -25,12 +25,12 @@
   <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
   <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.*" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.*" />
-  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.7.3">
+  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.*">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
   <PackageReference Include="System.DirectoryServices" Version="9.0.*" />
-  <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.*" />
  </ItemGroup>
 
  <ItemGroup>
