--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -11,7 +11,7 @@
 
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
   <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.*" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.*" />
   <PackageReference Include="MSTest.TestFramework" Version="3.*" />
