--- a/Test/SeleniumTests/SeleniumTests.csproj
+++ b/Test/SeleniumTests/SeleniumTests.csproj
@@ -25,7 +25,7 @@
   <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
   <PackageReference Include="Microsoft.Windows.Compatibility" Version="9.0.*" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.*" />
   <PackageReference Include="MSTest.TestFramework" Version="3.*" />
