--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -15,7 +15,7 @@
  </ItemGroup>
  
  <ItemGroup>
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.*" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
   <PackageReference Include="xunit" Version="2.*" />
   <PackageReference Include="DeepEqual" Version="5.*" />
