Umstellung .NET 9 -> .NET 10: Target Framework und NuGets

--- a/Test/SeleniumTests/SeleniumTests.csproj
+++ b/Test/SeleniumTests/SeleniumTests.csproj
@@ -3,7 +3,6 @@
  <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
 
  <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
   <IsPackable>false</IsPackable>
   <IsTestProject>true</IsTestProject>
  </PropertyGroup>
@@ -21,12 +20,12 @@
  <ItemGroup>
   <PackageReference Include="DotNetSeleniumExtras.PageObjects" Version="3.11.*" />
   <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
-  <PackageReference Include="Microsoft.Windows.Compatibility" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Windows.Compatibility" Version="10.0.*-*" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.*" />
   <PackageReference Include="MSTest.TestFramework" Version="3.*" />
   <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.27.*" />
