--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -27,10 +27,10 @@
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
   <PackageReference Include="ITV.EFCoreUtil" Version="8.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="9.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.*-*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.*" />
   <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.*" />
   <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.*" />
