--- a/src/DA/DA.csproj
+++ b/src/DA/DA.csproj
@@ -13,7 +13,6 @@
   <EnableDefaultGlobalUsings>false</EnableDefaultGlobalUsings>
   <AssemblyName>DAL</AssemblyName>
   <PackageId>DAL</PackageId>
-  <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
   <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
   <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
@@ -59,14 +58,14 @@
  <ItemGroup>
   <PackageReference Include="ITV.EFCoreUtil" Version="8.*" />
   <PackageReference Include="EntityFrameworkProfiler" Version="6.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.*-*" />
  </ItemGroup>
 
  <!--DB-Treiber-->
  <ItemGroup>
-  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.*-*" />
   <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.*" />
   <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
