--- a/src/MiracleList_BD/MiracleList_BD.csproj
+++ b/src/MiracleList_BD/MiracleList_BD.csproj
@@ -10,7 +10,7 @@
 
  <!--Runtime + Compiler-->
  <PropertyGroup>
-  <TargetFramework>net9.0-windows</TargetFramework>
+  <TargetFramework>net10.0-windows</TargetFramework>
   <OutputType>WinExe</OutputType>
   <UseWPF>true</UseWPF>
   <IsShippingPackage>false</IsShippingPackage>
@@ -46,8 +46,8 @@
  <!--Nuget-Pakete-->
  <ItemGroup>
   <!--Standardreferenzen für BD-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.*-*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
  </ItemGroup>
 
