--- a/Test/UnitTests/UnitTests.csproj
+++ b/Test/UnitTests/UnitTests.csproj
@@ -40,13 +40,13 @@
  </ItemGroup>
 
  <ItemGroup>
-  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="9.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
   <PackageReference Include="NHibernateProfiler.Appender" Version="6.0.*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
