--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -15,7 +15,7 @@
  </ItemGroup>
  
  <ItemGroup>
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
   <PackageReference Include="xunit" Version="2.*" />
   <PackageReference Include="DeepEqual" Version="5.*" />
@@ -28,9 +28,9 @@
    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
    <PrivateAssets>all</PrivateAssets>
   </PackageReference>
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="9.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.*-*" />
  </ItemGroup>
 
 </Project>
