--- a/src/EFCTools/EFCTools.csproj
+++ b/src/EFCTools/EFCTools.csproj
@@ -9,17 +9,17 @@
 
  <ItemGroup>
   <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.4.193.9" />
-  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="9.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.*">
+  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.*-*">
    <PrivateAssets>all</PrivateAssets>
    <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
   </PackageReference>
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.*-*" />
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.*-*" />
 
  </ItemGroup>
 
