--- a/src/MiracleList_BM/MiracleList_BM.csproj
+++ b/src/MiracleList_BM/MiracleList_BM.csproj
@@ -26,7 +26,7 @@
 
  <!--Runtime-->
  <PropertyGroup>
-  <TargetFrameworks>net9.0-android;net9.0-windows10.0.19041.0</TargetFrameworks>
+  <TargetFrameworks>net10.0-android;net10.0-windows10.0.19041.0</TargetFrameworks>
   <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
   <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
   <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">24.0</SupportedOSPlatformVersion>
@@ -102,15 +102,15 @@
 
  <!--Neue NuGet-Pakete für MAUI, die seit .NET 8.0 explicit sein müssen-->
  <ItemGroup>
-  <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="9.0.*" />
+  <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="10.0.*-*" />
  </ItemGroup>
 
  <!--COM-Referenz für Word-Dokumentengenerierung - geht nur auf Windows!!!-->
  <ItemGroup>
-  <COMReference Include="Microsoft.Office.Interop.Word" Condition="'$(TargetFramework)' == 'net9.0-windows10.0.19041.0'">
+  <COMReference Include="Microsoft.Office.Interop.Word" Condition="'$(TargetFramework)' == 'net10.0-windows10.0.19041.0'">
    <WrapperTool>tlbimp</WrapperTool>
    <VersionMinor>7</VersionMinor>
    <VersionMajor>8</VersionMajor>
@@ -120,6 +120,5 @@
    <EmbedInteropTypes>true</EmbedInteropTypes>
   </COMReference>
  </ItemGroup>
-
 
 </Project>
