--- a/src/MiracleList_Backend/MiracleList_Backend.csproj
+++ b/src/MiracleList_Backend/MiracleList_Backend.csproj
@@ -64,11 +64,11 @@
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
   <PackageReference Include="ITV.EFCoreUtil" Version="8.*" />
   <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.*" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.*" />
   <PackageReference Include="Swashbuckle.AspNetCore" Version="8.*" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="10.0.*-*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.*" />
  </ItemGroup>
 
