--- a/src/MiracleList_Interfaces/MiracleList_Interfaces.csproj
+++ b/src/MiracleList_Interfaces/MiracleList_Interfaces.csproj
@@ -9,8 +9,8 @@
 
  <ItemGroup>
   <ProjectReference Include="..\BO\BO.csproj" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="10.0.*-*" />
  </ItemGroup>
 
 </Project>
