--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -5,7 +5,6 @@
  <!--Compiler-->
  <PropertyGroup>
   <RootNamespace>Samples</RootNamespace>
-  <RazorLangVersion>9.0</RazorLangVersion>
   <NoWarn>1701;1702;1998;HTML00004;CS1591</NoWarn>
   <!--<TreatWarningsAsErrors>true</TreatWarningsAsErrors>-->
   <!--<WarningsAsErrors>RZ10012</WarningsAsErrors>-->
@@ -19,17 +18,17 @@
  <!--NuGet-->
  <ItemGroup>
 
-  <PackageReference Include="Microsoft.AspNetCore.Components" Version="9.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
-  <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="10.0.*-*" />
+  <PackageReference Include="Microsoft.Extensions.Localization" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.*">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
-  <PackageReference Include="System.DirectoryServices" Version="9.0.*" />
+  <PackageReference Include="System.DirectoryServices" Version="10.0.*-*" />
   <PackageReference Include="Blazored.LocalStorage" Version="4.*" />
  </ItemGroup>
 
